--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -1,2 +1,12 @@
 @import './base.css';
 
+::-webkit-scrollbar {
+  background-color: rgba(0,0,0,0);
+  width: 5px;
+}
+
+::-webkit-scrollbar-thumb {
+  background-color: rgba(150, 150, 150, 0.7);
+  border-radius: 10px;
+  border: 3px solid rgba(0,0,0,0);
+}
